--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,15 +1,14 @@
 {{ define "main" }}
 <div class="bucket-list">
-  {{ range $index, $item := .Site.Data.list }}
+  {{ range $item := .Site.Data.list }}
     <div class="list-item">
-      <!-- Adjusted Numbering -->
-      <span class="number">
-        {{ $displayNumber := add $index 1 }}
-        {{ if eq $displayNumber 100 }} <!-- For id=99, override to 99 -->
-          {{ $displayNumber = 99 }}
-        {{ end }}
-        {{ printf "%02d" $displayNumber }} <!-- Format as 01, 02...99 -->
-      </span>
+      <!-- Use $item.id directly -->
+      {{ $displayNumber := $item.id }}
+      <!-- For id=99, keep it as 99. For others, add +1 -->
+      {{ if ne $displayNumber 99 }}
+        {{ $displayNumber = add $displayNumber 1 }}
+      {{ end }}
+      <span class="number">{{ printf "%02d" $displayNumber }}</span>
 
       <!-- Checkbox -->
       <img 
