--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,12 +2,21 @@
   <div class="bucket-list">
     {{ range $index, $item := .Site.Data.list }}
       <div class="list-item">
-        <!-- Number SVG (01.svg to 99.svg) -->
-        <img 
-          src="/svg/numbers/{{ printf "%02d" (add $index 1) }}.svg" 
-          class="number" 
-          alt="Number {{ printf "%02d" (add $index 1) }}"
-        >
+        <!-- Double-Digit Number SVG -->
+        <div class="number-container">
+          <!-- Tens Place SVG -->
+          <img 
+            src="/svg/numbers/{{ printf "%02d" (div $index 10) }}.svg" 
+            class="number-digit" 
+            alt="Tens Digit"
+          >
+          <!-- Units Place SVG -->
+          <img 
+            src="/svg/numbers/{{ printf "%02d" (mod $index 10) }}.svg" 
+            class="number-digit" 
+            alt="Units Digit"
+          >
+        </div>
 
         <!-- Checkbox SVG -->
         <img 
