--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,32 +2,27 @@
   <div class="bucket-list">
     {{ range $index, $item := .Site.Data.list }}
       <div class="list-item">
-        <!-- Double-Digit Number SVG -->
-        <img 
-          src="/svg/numbers/{{ printf "%02d" $index }}.svg" 
-          class="number" 
-          alt="Number {{ printf "%02d" $index }}"
-        >
-
         <!-- Checkbox SVG -->
         <img 
-          src="/svg/checkboxes/{{ if $item.checked }}checked{{ else }}unchecked{{ end }}.svg" 
+          src="/svg/checkboxes/{{ if $item.checked }}checked1{{ else }}unchecked1{{ end }}.svg" 
           class="checkbox" 
           alt="Checkbox"
         >
 
+        <!-- Padding After Checkbox -->
+        <span class="padding-after-checkbox"></span>
+
+        <!-- Text Number (00., 01., 02., ..., 99.) -->
+        <span class="text-number">
+          {{ printf "%02d." $index }}
+        </span>
+
+        <!-- Padding After Text Number -->
+        <span class="padding-after-number"></span>
+
         <!-- Handwritten Text -->
         <span class="item-text">{{ $item.text }}</span>
       </div>
-
-      <!-- Add Divider (except after the last item) -->
-      {{ if lt $index (sub (len $.Site.Data.list) 1) }}
-        <img 
-          src="/svg/divider.svg" 
-          class="divider" 
-          alt="Divider"
-        >
-      {{ end }}
     {{ end }}
   </div>
 {{ end }}
