--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -42,8 +42,8 @@ body {
 
 /* Checkbox SVG */
 .checkbox {
-  width: 32px;
-  height: 32px;
+  width: 48px;
+  height: 48px;
   display: inline-block;
 }
 
@@ -54,9 +54,10 @@ body {
 
 /* Text Number */
 .text-number {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-family: 'ChenYuluoyan-Thin', sans-serif;
-  color: var(--primary); /* Ensure text is readable */
+  color: white; /* Set text color to white */
+  text-shadow: black 0.1em 0.1em 0.2em; /* Add text shadow */
 }
 
 /* Padding After Text Number */
@@ -66,10 +67,11 @@ body {
 
 /* Handwritten Text */
 .item-text {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   line-height: 1.5;
   font-family: 'ChenYuluoyan-Thin', sans-serif;
-  color: var(--primary); /* Ensure text is readable */
+  color: white; /* Set text color to white */
+  text-shadow: black 0.1em 0.1em 0.2em; /* Add text shadow */
 }
 
 /* Responsive Adjustments */
