update custom.css - typo text hover color correct code

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -93,7 +93,7 @@ body {
 
 /* Hover effect for item text */
 .item-text:hover {
-  color: #4297A0- ; /* Hover color */
+  color: #4297A0; /* Hover color */
 }
 
 /* Responsive Adjustments */
